name: lockfree-test
version: 0.1.0.0

license: Apache-2.0
license-file: LICENSE
author: Peter Fogg
maintainer: pfogg@umail.iu.edu

build-type: Simple

cabal-version: >=1.10

library
  exposed-modules: Data.Concurrent.PureQueue
  build-depends: base >= 4.6
                 , containers >= 0.5.5
                 , atomic-primops >= 0.7
  hs-source-dirs: src/
  default-language: Haskell2010

benchmark bench-lockfree-test
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    hs-source-dirs: test/
    build-depends: base >= 4.6 && <= 4.8
                   , criterion >= 1.0
                   , lockfree-queue >= 0.2
