name: lockfree-test
version: 0.1.0.0

license: Apache-2.0
license-file: LICENSE
author: Peter Fogg
maintainer: pfogg@umail.iu.edu

build-type: Simple

cabal-version: >=1.10

flag debug
  description: Do a debug compile.
  default: True
  manual: True

library
  exposed-modules: Data.Concurrent.PureQueue
                   , Data.Concurrent.PureBag
                   , Data.Concurrent.ScalableBag
                   , Data.Concurrent.AdaptiveBag
  build-depends: base >= 4.6
                 , containers >= 0.5.5
                 , atomic-primops >= 0.7
                 , vector >= 0.10
  hs-source-dirs: src/
  default-language: Haskell2010
  if flag(debug)
      ghc-options: -keep-tmp-files -dsuppress-module-prefixes -ddump-to-file -ddump-core-stats -ddump-simpl-stats -dcore-lint -dcmm-lint -ddump-ds -ddump-simpl -ddump-stg -ddump-asm -ddump-bcos -ddump-cmm -ddump-opt-cmm -ddump-inlinings

benchmark bench-lockfree-test
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N -eventlog
    hs-source-dirs: test/
    build-depends: base >= 4.6 && <= 4.8
                   , criterion >= 1.0
                   , lockfree-queue >= 0.2
                   , async >= 2.0 && < 2.1
                   , vector >= 0.10
                   , random >= 1.1
                   , lockfree-test
    if flag(debug)
      ghc-options: -keep-tmp-files -dsuppress-module-prefixes -ddump-to-file -ddump-core-stats -ddump-simpl-stats -dcore-lint -dcmm-lint -ddump-ds -ddump-simpl -ddump-stg -ddump-asm -ddump-bcos -ddump-cmm -ddump-opt-cmm -ddump-inlinings
